sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:7: error: '(' expected but identifier found.
      if plusPetitQue(j,min) {
         ^